# hermes-mimo-writer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: brief.md  sample-essay.docx  style_sample_1.txt  style_sample_2.txt
src/writing_suite/: __init__.py  cli.py  config.py  mimo_client.py  models.py  pipeline.py
src/writing_suite/agents/: __init__.py  ai_sanitizer.py  base.py  brief_parser.py  citation_manager.py  content_drafter.py  docx_assembler.py  outline_drafter.py  style_profiler.py
tests/: conftest.py  test_ai_sanitizer.py  test_brief_parser.py  test_citation_manager.py  test_config.py  test_content_drafter.py  test_docx_assembler.py  test_mimo_client.py  test_models.py  test_outline_drafter.py  test_pipeline_integration.py  test_style_profiler.py
web/: .gitignore  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/sanitize/: route.ts
