[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-mimo-writer"
version = "0.1.0"
description = "Multi-agent academic writing pipeline powered by Xiaomi MiMo V2.5 Pro + Hermes Agent"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "gnpa910"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "python-docx>=1.1.2",
    "pydantic>=2.7.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.1",
]

[project.scripts]
hermes-writer = "writing_suite.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/writing_suite"]
omit = ["*/tests/*"]
